--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.176.0",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.3",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
